# SINV

./: .gitignore  LICENSE  README.md  benchmarking.py  main.py  pyproject.toml  verifyResults.py  vizuUtils.py
algorithms/: bcr.py  bcr_parallel.py  bcr_serial.py  bcr_v0.py  fullInversion.py  hpr_paper.py  hpr_parallel.py  hpr_serial.py  hybridParRec.py  nested_dissection.py  pairwise.py  pairwise_serial.py  pdiv.py  pdiv_aggregate.py  pdiv_localmap.py  pdiv_parallel.py  rgf.py  rgf2sided.py  smw.py
algorithms/depreciated/: pdiv_serial.py
tests/: dev_pdiv_parallel.py  pdiv_aggregate_test.py  test_pdiv_parallel.py
tests/bcr_tests/: bcr_parallel_test.py  bcr_serial_test.py
tests/block_tridiag_gausselim/: block_tridiag_lusolve_symmat_reel_test.py
tests/block_tridiag_gausselim_tests/: block_tridiag_lusolve_nosymmat_reel_test.py
tests/block_tridiag_lusolve_tests/: block_tridiag_lusolve_symmat_complex_test.py
tests/pdiv_aggregate_tests/: pdiv_aggregate_basic_complex_test.py  pdiv_aggregate_basic_reel_test.py  pdiv_aggregate_bigmat_complex_test.py  pdiv_aggregate_bigmat_reel_test.py  pdiv_aggregate_nosymmat_complex_test.py  pdiv_aggregate_nosymmat_reel_test.py  pdiv_aggregate_symmat_complex_test.py  pdiv_aggregate_symmat_reel_test.py
tests/pdiv_mincom_tests/: pdiv_mincom_nosymmat_complex_test.py  pdiv_mincom_nosymmat_reel_test.py  pdiv_mincom_symmat_complex_test.py  pdiv_mincom_symmat_reel_test.py
tests/pdiv_tests/: pdiv_test.py
utils/: benchmarking.py  generateMatrices.py  permutationMatrices.py  transformMatrices.py  vizualisation.py
(+117 files in other folders)
